@@ -92,7 +92,7 @@
                         % else:
                         <div class="col-md-6 p-0 h-md-250 text-right d-none d-md-block">
                         % endif
-                            <img class="bootblog4-featured-large-image" src="${url_replacer(featured[0].permalink(), featured[0].previewimage, lang, 'full_path')}" alt="${featured.pop(0).title()}">
+                            <img class="bootblog4-featured-large-image" src="${featured[0].previewimage}" alt="${featured.pop(0).title()}">
                         </div>
                     % else:
                         <div class="lead my-3 mb-0">${featured.pop(0).text(teaser_only=True, strip_html=theme_config.get('featured_strip_html', True))}</div>
@@ -117,7 +117,7 @@
                            % if featured[0].previewimage:
                                <div class="card-text mb-auto bootblog4-featured-text">${featured[0].text(teaser_only=True, strip_html=theme_config.get('featured_strip_html', True))}</div>
                                </div>
-                               <img class="card-img-right flex-auto d-none d-lg-block" src="${url_replacer(featured[0].permalink(), featured[0].previewimage, lang, 'full_path')}" alt="${featured.pop(0).title()}">
+                               <img class="card-img-right flex-auto d-none d-lg-block" src="${featured[0].previewimage}" alt="${featured.pop(0).title()}">
                            % else:
                            <div class="card-text mb-auto bootblog4-featured-text">${featured.pop(0).text(teaser_only=True, strip_html=theme_config.get('featured_strip_html', True))}</div>
                            </div>
@@ -135,7 +135,7 @@
                            % if featured[0].previewimage:
                                <div class="card-text mb-auto bootblog4-featured-text">${featured[0].text(teaser_only=True, strip_html=theme_config.get('featured_strip_html', True))}</div>
                                </div>
-                               <img class="card-img-right flex-auto d-none d-lg-block" src="${url_replacer(featured[0].permalink(), featured[0].previewimage, lang, 'full_path')}" alt="${featured.pop(0).title()}">
+                               <img class="card-img-right flex-auto d-none d-lg-block" src="${featured[0].previewimage}" alt="${featured.pop(0).title()}">
                            % else:
                            <div class="card-text mb-auto bootblog4-featured-text">${featured.pop(0).text(teaser_only=True, strip_html=theme_config.get('featured_strip_html', True))}</div>
                            </div>
